fix woocommerce page layout issue (#264)

--- a/assets/sass/layouts/sidebar/_no-sidebar.scss
+++ b/assets/sass/layouts/sidebar/_no-sidebar.scss
@@ -89,7 +89,7 @@
 	}
 }
 
-.cm-normal-container {
+body:not(.woocommerce-page).cm-normal-container {
 	overflow: hidden;
 
 	.cm-primary {
@@ -106,7 +106,7 @@
 			}
 
 			> .alignwide {
-				margin-left: -100px;
+				margin-left: -100px; 
 				margin-right: -100px;
 				max-width: unset;
 
